--- a/templates/includes/base.html
+++ b/templates/includes/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <!-- header start-->
-{% include './includes/head.html' %}
+{% include './head.html' %}
 <!-- header end-->
 
 <body>
