--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <!-- header start-->
-{% include './head.html' %}
+{% include './includes/head.html' %}
 <!-- header end-->
 
 <body>
