--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends '../includes/base.html' %}
+{% extends './base.html' %}
 {% comment %} {% load 'static' %} {% endcomment %}
 
   {% block content %}
@@ -8,43 +8,43 @@
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
   
   <!-- ======= Header ======= -->
-  {% include '../includes/header.html' %}
+  {% include './includes/header.html' %}
   <!-- End Header -->
 
    <!-- ======= LandingPage Section ======= -->
-   {% include '../sections/landingpage.html' %}
+   {% include './sections/landingpage.html' %}
    <!-- End LandingPage -->
 
   <main id="main">
 
     <!-- ======= Collections Section ======= -->
-    {% include '../sections/collection.html' %}
+    {% include './sections/collection.html' %}
     <!-- End Collections Section -->
 
     <!-- ======= journey Section ======= -->
-    {% include '../sections/journey.html' %}
+    {% include './sections/journey.html' %}
     <!-- End journey Section -->
 
     <!-- ======= roadmap Section ======= -->
-    {% include '../sections/roadmap.html' %}
+    {% include './sections/roadmap.html' %}
     <!-- End roadmap Section -->
 
     <!-- ======= our-collection Section ======= -->
-    {% include '../sections/our-collection.html' %}
+    {% include './sections/our-collection.html' %}
     <!-- End our-collection Section -->
 
     <!-- ======= coming-soon Section ======= -->
-    {% include '../sections/coming-soon.html' %}
+    {% include './sections/coming-soon.html' %}
     <!-- End coming-soon Section -->
 
     <!-- ======= Contact Section ======= -->
-    {% include '../sections/contacts.html' %}
+    {% include './sections/contacts.html' %}
     <!-- End Contact Section -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  {% include '../includes/footer.html' %}
+  {% include './includes/footer.html' %}
   <!-- End Footer -->
 
 {% endblock %}
